# dataset-bias-reproduction

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-lock.txt  requirements.txt
experiments/: Combo-1.yaml  corruptions.yaml
experiments/Combo-1/: config.yaml
reports/: ETHICS_AND_DATA_NOTES.md  FINAL_RESULTS.md  PAPER_EXTRACT.md  REPRODUCTION_REPORT.md  reproduction_results.json
scripts/: create_test_data.py  download_cc.py  download_datacomp.py  download_imagenet.py  download_laion.py  download_wit.py  download_yfcc.py  quick_test.py  run_full_reproduction.py  smoke_test.py
src/data/: base_downloader.py  dataset.py  sampler.py
src/eval/: evaluator.py
src/models/: model_factory.py
src/train/: trainer.py
